--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+   "engines": {
+    "node": "6.10.0"
+  },
   "author": "",
   "license": "ISC"
 }
+
+
